--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,12 @@ __pycache__/
 *.egg-info/
 
 data/*.duckdb
-data/staging/images/posters/*.jpg
+
+data/**/*.jpg
+data/**/*.json
+data/**/*.srt
+data/**/*.nfo
+data/**/*.ass
+data/**/*.zip
+
+tmp*/
